----- cvs ci ------
Thu Nov 23 23:27:53 NOVT 2000
max (patch from Serguei Revtov):
* using of overString instead of copyString for linkDefaults data copying

----- cvs ci ------
Thu Nov 16 12:23:56 MSK 2000
Fedor:
+ Added new token CommentChar (in tparser too)

----- cvs ci ------
Tue Nov 14 11:23:22 MSK 2000
max (patch from Serguei Revtov):
* BundleNameStyle: addrDiffAlways in tparser

----- cvs ci ------
Mon Nov 13 22:56:43 NOVT 2000
max:
* fixed parsing excludePassthroughCarbon

----- cvs ci ------
Sun Nov 12 13:34:40 NOVT 2000
max:
* dublicates checking in copyString()

----- cvs ci ------
Wed Nov  8 19:30:56 NOVT 2000
max:
* default password from linkdefaults can be changed (report from Ivan Prokudin)

----- cvs ci ------
Sun Oct 29 00:20:09 NOVST 2000
max:
* fixed packNetmail parsing

----- cvs ci ------
Mon Oct 23 18:09:53 MET 2000
  Michael Haase:
+ added statlog for hpt

Fri Oct 27 00:45:05 NOVST 2000
max:
* add tokens maxUnpackedNetmail, packNetmail for bsopack

Sun Oct 22 15:38:35 NOVST 2000
max:
* fixed version parsing

Sat Oct 21 19:41:45 NOVST 2000
max:
* noPause works for echoAreas & fileAreas

Mon Oct 16 21:44:12 NOVST 2000
max:
* -debug echoarea token

Sun Oct 15 15:06:03 NOVST 2000
max:
* exit(1) to printLinkError()

Mon Oct  9 17:29:40 NOVST 2000
max:
* bugfix for last patch from yesterday

Mon Oct  9 01:38:41 NOVST 2000
max (patch from Alex Bronin):
* allowing to use any length passwords.
  pktPwd will stripped to 8 symbols, others remains unchanged.

Sat Oct  7 16:58:58 MSZ 2000
tobi:
* fecfg2fconf is now platform independent
* -> included fecfg2fconf into standard makefile.

----- cvs ci ------
Wed Sep 27 20:24:45 NOVST 2000
max:
* robotsArea token

----- cvs ci ------
Tue Sep 26 00:25:41 NOVST 2000
max (patch from Serguei Revtov):
* addrDiffAlways value for BundleNameStyle & linkBundleNameStyle

----- cvs ci ------
Sun Sep 24 15:14:00 NOVST 2000
max (patch from Serguei Revtov):
* some dumb checks in tparser

----- cvs ci ------